Building EditTextActivity to show Equations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MathViewExample</string>
+    <string name="show_equation">Show Equation</string>
+    <string name="show_recyclerview">Show RecyclerView</string>
 </resources>
